<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.news.kernel.LogInActivity"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/userIconLogIn"
        android:layout_width="151dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user_icon"
        android:contentDescription="@string/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_emailId_log"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:textColorHint="@color/less_important_text"
        android:padding="7dp"
        android:paddingStart="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIconLogIn"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/less_important_text"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailId_log"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/password"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password_log"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:textColorHint="@color/less_important_text"
        android:ems="10"
        android:textSize="20sp"
        android:padding="0dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/log_in"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorLink="@color/button_color"
        android:textColor="@color/app_color"
        />


    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>