<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.news.kernel.MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="151dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColorHint="@color/less_important_text"
        android:padding="7dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIcon"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_emailId"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:textColorHint="@color/less_important_text"
        android:padding="7dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/black"
        tools:ignore="TextFields" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/less_important_text"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailId"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/password"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_box"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/less_important_text"
            android:ems="10"
            android:textSize="20sp"
            android:padding="0dp"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/create_account"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <TextView
        android:id="@+id/past_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_an_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/past_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorLink="@color/button_color"
        android:textColor="@color/app_color"
         />

    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>